--- a/back-end/micr-web/src/main/resources/application.yml
+++ b/back-end/micr-web/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: bomnmi123@gmail.com
-    password: phecsditbvzgvbev
+    password: xxxxxxxxxxxxxxxx
     properties:
       mail:
         smtp:
